--- a/drum_kit.html
+++ b/drum_kit.html
@@ -73,7 +73,7 @@
     </div>
 
 </div>
-<div class="foo">
+<div class="title">
   <span class="letter" data-letter="J">J</span>
   <span class="letter" data-letter="S">S</span>
   <span class="letter">&nbsp</span>
